--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2629,12 +2629,12 @@ input, select, textarea {
 		}
 
 		#header h2, #header h3, #header h4, #header h5, #header h6 {
-			color: #ffffff;
+			color: #a6a6a6;
 		}
 
 		#header h1 {
 			color: rgba(255, 255, 255, 0.5);
-			font-size: 1.35em;
+			font-size: 2.35em;
 			line-height: 1.75em;
 			margin: 0;
 		}
@@ -3003,7 +3003,7 @@ input, select, textarea {
 			}
 
 				#header h1 {
-					font-size: 1.25em;
+					font-size: 2.35em;
 				}
 
 					#header h1 br {
@@ -3058,7 +3058,7 @@ input, select, textarea {
 				background-position: top left, center center;
 				background-size: auto,		cover;
 				left: auto;
-				padding: 6em 4em;
+				padding: 1em 1em;
 				position: relative;
 				text-align: center;
 				top: auto;
@@ -3067,7 +3067,7 @@ input, select, textarea {
 			}
 
 				#header h1 {
-					font-size: 1.75em;
+					font-size: 2.35em;
 				}
 
 					#header h1 br {
@@ -3111,7 +3111,7 @@ input, select, textarea {
 
 			#main {
 				margin: 0;
-				padding: 6em 4em;
+				padding: 4em 4em;
 				width: 100%;
 			}
 
@@ -3202,11 +3202,15 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				padding: 4.5em 1.5em;
+				padding: 1em 1em;
 			}
 
 				#header h1 br {
-					display: none;
+					
+				}
+
+				#header h1 {
+					font-size: 2.05em;
 				}
 
 		/* Footer */
