--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
 
+
 /*
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
@@ -2205,6 +2206,48 @@ input, select, textarea {
 			}
 
 			ul.icons li .icon:before {
+				font-size: 2.5em;
+			}
+
+/* Assessment Icons */
+
+	ul.assess-icons {
+		cursor: default;
+		list-style: none;
+		padding-left: 0;
+	}
+
+		ul.assess-icons li {
+			display: inline-block;
+			padding: 2em 3em 0 0;
+		}
+
+			ul.assess-icons li:last-child {
+				padding-right: 0;
+			}
+
+			ul.assess-icons li .icon:before {
+				font-size: 5.5em;
+			}
+
+/* Assessment Images */
+
+	ul.assess-images {
+		cursor: default;
+		list-style: none;
+		padding-left: 0;
+	}
+
+		ul.assess-images li {
+			display: inline-block;
+			padding: 2em 3em 0 0;
+		}
+
+			ul.assess-images li:last-child {
+				padding-right: 0;
+			}
+
+			ul.assess-images li .icon:before {
 				font-size: 1.5em;
 			}
 
