--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2642,7 +2642,7 @@ input, select, textarea {
 			-webkit-flex-grow: 1;
 			-ms-flex-grow: 1;
 			flex-grow: 1;
-			margin: 0 0 2em 0;
+			margin: -3.5em 0 -1.5em 0;
 		}
 
 		#header strong, #header b {
@@ -2706,7 +2706,7 @@ input, select, textarea {
 	#main {
 		margin-left: 35%;
 		max-width: 54em;
-		padding: 8em 4em 4em 4em;
+		padding: 4em 4em 4em 4em;
 		width: calc(100% - 35%);
 	}
 
@@ -3075,7 +3075,7 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				background-attachment: scroll;
+				background-attachment: static;
 				background-position: top left, center center;
 				background-size: auto,		cover;
 				left: auto;
@@ -3179,7 +3179,7 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				padding: 2.25em 1.5em;
+				padding: 2em 1.5em;
 			}
 
 				#header h1 {
