--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1806,6 +1806,7 @@ input, select, textarea {
 		font-size: 0.9em;
 		font-weight: 400;
 		margin: 0 0 1em 0;
+		text-decoration: none;
 	}
 
 	input[type="text"],
@@ -2056,6 +2057,14 @@ input, select, textarea {
 				font-size: 5.5em;
 			}
 
+			.iconify { 
+				text-decoration: none;
+				list-style: none;
+				font-size: 5.5em; 
+				color: orange;
+			}
+			
+
 /* Image */
 
 	.image {
@@ -2259,6 +2268,8 @@ input, select, textarea {
 				top: 0;
 				width: 1em;
 			}
+
+			
 
 /* Actions */
 
