--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,6 +78,10 @@ input, select, textarea {
 		box-sizing: border-box;
 	}
 
+	label {
+		text-decoration: none;
+	}
+
 	*, *:before, *:after {
 		box-sizing: inherit;
 	}
@@ -110,14 +114,13 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-		border-bottom: dotted 1px;
 		color: #49bf9d;
 		text-decoration: none;
 	}
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #49bf9d !important;
+			color: #49bf9ed5 !important;
 			text-decoration: none;
 		}
 
@@ -2036,6 +2039,41 @@ input, select, textarea {
 			font-family: 'Font Awesome 5 Brands';
 		}
 
+		.iconify {
+			text-decoration: none;
+			border-bottom: none;
+			position: relative;
+		}
+	
+			.iconify:before {
+				-moz-osx-font-smoothing: grayscale;
+				-webkit-font-smoothing: antialiased;
+				display: inline-block;
+				font-style: normal;
+				font-variant: normal;
+				text-rendering: auto;
+				line-height: 1;
+				text-transform: none !important;
+				font-family: 'Font Awesome 5 Free';
+				font-weight: 400;
+			}
+	
+			.iconify > .label {
+				display: none;
+			}
+	
+			.iconify:before {
+				line-height: inherit;
+			}
+	
+			.iconify.solid:before {
+				font-weight: 900;
+			}
+	
+			.icon.brands:before {
+				font-family: 'Font Awesome 5 Brands';
+			}
+
 /* Assessment Icons */
 
 	ul.assess-icons {
@@ -2046,7 +2084,7 @@ input, select, textarea {
 
 		ul.assess-icons li {
 			display: inline-block;
-			padding: 2em 3em 0 0;
+			padding: 0em 2em 0 0;
 		}
 
 			ul.assess-icons li:last-child {
